@@ -1384,9 +1384,9 @@ bool tcd_decode_tile(opj_tcd_t *tcd, unsigned char *src, int len, int tileno, op
 		if (tcd->cp->reduce != 0) {
 			tcd->image->comps[compno].resno_decoded =
 				tile->comps[compno].numresolutions - tcd->cp->reduce - 1;
-			if (tcd->image->comps[compno].resno_decoded < 1) {
+			if (tcd->image->comps[compno].resno_decoded < 0) {
 				opj_event_msg(tcd->cinfo, EVT_ERROR, "Error decoding tile. The number of resolutions to remove is higher than the number "
-					" of resolutions in the original codestream\nModify the cp_reduce parameter.\n");
+					"of resolutions in the original codestream\nModify the cp_reduce parameter.\n");
 				return false;
 			}
 		}
